--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,18 @@
         <link rel="icon" href="favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="Sagnik's Link " />
+        <meta name="description" content="Dalam nama bapa, putra, dan roh kudus. Are you ready to lose?" />
+        <meta property="og:title" content="Happy Trigger Open Major S2" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://event.happytrigger.net" />
+        <meta
+            property="og:image"
+            content="https://happytrigger.net/assets/img/poster.png"
+        />
+        <meta
+            property="og:description"
+            content="Dalam nama bapa, putra, dan roh kudus. Are you ready to lose?"
+        />
         <link rel="apple-touch-icon" href="favicon.png" />
         <!--
       manifest.json provides metadata used when your web app is installed on a
