--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
             property="og:description"
             content="Dalam nama bapa, putra, dan roh kudus. Are you ready to lose?"
         />
+        <meta name="twitter:card" content="summary_large_image" />
         <link rel="apple-touch-icon" href="favicon.png" />
         <!--
       manifest.json provides metadata used when your web app is installed on a
