Bring back poster

--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,13 @@
         <meta property="og:url" content="https://event.happytrigger.net" />
         <meta
             property="og:image"
-            content="https://happytrigger.net/assets/img/favicon.png"
+            content="https://happytrigger.net/assets/img/poster.png"
         />
         <meta
             property="og:description"
             content="Dalam nama bapa, putra, dan roh kudus. Are you ready to lose?"
         />
+        <meta name="twitter:card" content="summary_large_image" />
         <link rel="apple-touch-icon" href="favicon.png" />
         <!--
       manifest.json provides metadata used when your web app is installed on a
