--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,17 @@
         <link rel="icon" href="favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="Dalam nama bapa, putra, dan roh kudus. Are you ready to lose?" />
+        <meta name="description" content="Don't let your balls get succed" />
         <meta property="og:title" content="Happy Trigger Open Major S2" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://event.happytrigger.net" />
+        <meta property="og:url" content="https://s2.happytrigger.net" />
         <meta
             property="og:image"
-            content="https://happytrigger.net/assets/img/poster.png"
+            content="https://happytrigger.net/assets/img/open-major-s2/poster.png"
         />
         <meta
             property="og:description"
-            content="Dalam nama bapa, putra, dan roh kudus. Are you ready to lose?"
+            content="Don't let your balls get succed"
         />
         <meta name="twitter:card" content="summary_large_image" />
         <link rel="apple-touch-icon" href="favicon.png" />
